--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
+import Layout from "../../layouts/Layout.astro";
 import { render } from "astro:content";
 
 export async function getStaticPaths() {
@@ -14,8 +15,11 @@ type Props = CollectionEntry<"blog">;
 
 const post = Astro.props;
 const { Content } = await render(post);
+const { title, description, pubDate, updatedDate, heroImage } = post.data;
 ---
 
-<BlogPost {...post.data}>
-  <Content />
-</BlogPost>
+<Layout title={title} description={description}>
+  <BlogPost {...post.data}>
+    <Content />
+  </BlogPost>
+</Layout>
