--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,64 +1,29 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-
-import "../styles/global.css";
+import Layout from "../layouts/Layout.astro";
+import Logo from "../assets/logo.svg";
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body>
-    <Header />
-    <main>
-      <h1>🧑‍🚀 Hello, Astronaut!</h1>
-      <p>
-        Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
-        template. This template serves as a lightweight, minimally-styled starting
-        point for anyone looking to build a personal website, blog, or portfolio
-        with Astro.
+<Layout showBackground={true}>
+  <main>
+    <div
+      class="relative mx-auto flex max-w-3xl flex-col justify-center py-20 text-zinc-900 dark:text-zinc-100"
+    >
+      <div class="relative left-[90px] text-zinc-900 dark:text-orange-500">
+        <Logo />
+      </div>
+
+      <p class="absolute top-[150px] left-[20px] font-mono">
+        // welcome to my website
       </p>
-      <p>
-        This template comes with a few integrations already configured in your
-        <code>astro.config.mjs</code> file. You can customize your setup with
-        <a href="https://astro.build/integrations">Astro Integrations</a> to add
-        tools like Tailwind, React, or Vue to your project.
+      <p class="absolute top-[350px] left-[420px] w-full font-mono">
+        // creative developer / designer
       </p>
-      <p>Here are a few ideas on how to get started with the template:</p>
-      <ul>
-        <li>Edit this page in <code>src/pages/index.astro</code></li>
-        <li>
-          Edit the site header items in <code>src/components/Header.astro</code>
-        </li>
-        <li>
-          Add your name to the footer in <code
-            >src/components/Footer.astro</code>
-        </li>
-        <li>
-          Check out the included blog posts in <code>src/content/blog/</code>
-        </li>
-        <li>
-          Customize the blog post page layout in <code
-            >src/layouts/BlogPost.astro</code>
-        </li>
-      </ul>
-      <p>
-        Have fun! If you get stuck, remember to
-        <a href="https://docs.astro.build/">read the docs</a>
-        or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
+      <p class="absolute top-[475px] left-[420px] font-mono">
+        // based in finland
       </p>
-      <p>
-        Looking for a blog template with a bit more personality? Check out
-        <a href="https://github.com/Charca/astro-blog-template"
-          >astro-blog-template</a
-        >
-        by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-      </p>
-    </main>
-    <Footer />
-  </body>
-</html>
+      <div class="inline-flex flex-wrap items-center justify-around pt-24">
+        <p class="font-mono">// only development is permanent</p>
+      </div>
+    </div>
+  </main>
+</Layout>
