--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Logo from "../assets/logo.svg";
 ---
 
-<Layout showBackground={true}>
+<Layout showBackground={true} showFooter={false}>
   <main>
     <div
       class="relative mx-auto flex max-w-3xl flex-col justify-center py-20 text-zinc-900 dark:text-zinc-100"
