--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,77 +1,89 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import BlogPost from "../layouts/BlogPost.astro";
-import AboutHeroImage from "../assets/blog-placeholder-about.jpg";
+
+import profileImage from "../assets/juho_profile.jpg";
+import DotPattern from "../components/DotPattern.astro";
+import { Image } from "astro:assets";
+import CTA from "../components/CTA.astro";
 ---
 
 <Layout title="About Me" description="Lorem ipsum dolor sit amet">
-  <BlogPost
-    title="About Me"
-    pubDate={new Date("August 08 2021")}
-    heroImage={AboutHeroImage}
-  >
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
-      integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu
-      turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-      adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus
-      sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna
-      fermentum iaculis eu non diam phasellus vestibulum lorem. Varius sit amet
-      mattis vulputate enim. Habitasse platea dictumst quisque sagittis. Integer
-      quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit
-      amet.
-    </p>
+  <div class="mx-auto max-w-4xl">
+    <div class="mt-16 flex flex-col lg:my-24 lg:flex-row lg:space-x-32">
+      <div class="relative h-80 w-full md:w-2/5">
+        <div
+          class="absolute z-30"
+          style={{
+            background: "#9acd32",
+            width: "200px",
+            height: "200px",
+            transform: "rotate(-30deg)",
+          }}
+        >
+        </div>
 
-    <p>
-      Morbi tristique senectus et netus. Id semper risus in hendrerit gravida
-      rutrum quisque non tellus. Habitasse platea dictumst quisque sagittis
-      purus sit amet. Tellus molestie nunc non blandit massa. Cursus vitae
-      congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-      porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt
-      lobortis. In cursus turpis massa tincidunt dui ut ornare lectus. Integer
-      feugiat scelerisque varius morbi enim nunc. Bibendum neque egestas congue
-      quisque egestas diam. Cras ornare arcu dui vivamus arcu felis bibendum.
-      Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et
-      pharetra pharetra massa massa ultricies mi.
-    </p>
-
-    <p>
-      Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque.
-      Diam sit amet nisl suscipit. Lacus viverra vitae congue eu consequat ac
-      felis donec. Egestas integer eget aliquet nibh praesent tristique magna
-      sit amet. Eget magna fermentum iaculis eu non diam. In vitae turpis massa
-      sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget
-      lorem dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed
-      viverra. Posuere ac ut consequat semper viverra nam. Laoreet suspendisse
-      interdum consectetur libero id faucibus. Diam phasellus vestibulum lorem
-      sed risus ultricies tristique. Rhoncus dolor purus non enim praesent
-      elementum facilisis. Ultrices tincidunt arcu non sodales neque. Tempus
-      egestas sed sed risus pretium quam vulputate. Viverra suspendisse potenti
-      nullam ac tortor vitae purus faucibus ornare. Fringilla urna porttitor
-      rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-    </p>
-
-    <p>
-      Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere
-      ac ut consequat semper viverra. Tellus mauris a diam maecenas sed enim ut
-      sem viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris
-      in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-      gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas
-      tellus rutrum tellus pellentesque eu. Fusce ut placerat orci nulla
-      pellentesque dignissim enim sit amet. Ut enim blandit volutpat maecenas
-      volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-      cursus metus aliquam eleifend mi.
-    </p>
-
-    <p>
-      Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus
-      imperdiet. Id porta nibh venenatis cras sed felis eget velit. Ipsum a arcu
-      cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum.
-      Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit
-      libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed
-      pulvinar proin gravida. Egestas integer eget aliquet nibh praesent
-      tristique magna.
-    </p>
-  </BlogPost>
+        <div
+          class="absolute z-20 h-0 w-0 border"
+          style={{
+            top: "50px",
+            left: "130px",
+            transform: "rotate(-130deg)",
+            borderWidth: "0 100px 170px 100px",
+            borderColor: "transparent transparent #cd5c5c transparent",
+          }}
+        >
+        </div>
+        <div
+          class="absolute z-10 text-zinc-200 dark:text-zinc-700"
+          style={{ top: "150px", left: "100px", transform: "rotate(-90deg)" }}
+        >
+          <DotPattern />
+        </div>
+        <div
+          class="absolute z-40 shrink-0 transform rounded-full bg-gradient-to-r from-[#6EE7B7] via-[#3B82F6] to-[#9333EA] p-1 transition-all hover:scale-[1.01]"
+          style={{ width: "200px", height: "200px", top: "50px", left: "80px" }}
+        >
+          <Image
+            src={profileImage}
+            alt="Juho's profile picture"
+            class="z-40 rounded-full"
+          />
+        </div>
+      </div>
+      <div
+        class="mt-12 w-full space-y-12 p-8 text-zinc-900 lg:w-3/5 lg:p-0 dark:text-zinc-300"
+      >
+        <h2 class="text-6xl font-medium">hello 👋🏻</h2>
+        <div class="flex flex-col space-y-6">
+          <p>
+            My name is Juho Pekkala. I warmly thank you finding here and humbly
+            welcome you to my website.
+          </p>
+          <p>
+            I'm a creative <span class="font-bold tracking-wide">developer</span
+            >,{" "}
+            <span class="font-bold tracking-wide">designer</span> and lifelong learner
+            from Finland 🇫🇮. Currently website works as a simple professional info
+            website. Planning to add blog in the future. I love creativity, photography,
+            DIY projects and adventures so I might share bits of those as well!
+          </p>
+        </div>
+        <div class="flex flex-col space-y-4">
+          <CTA to="/blog/hello-world/"
+            >Read more about me in the introduction post</CTA
+          >
+          <CTA to="/cv/">Here to check my CV?</CTA>
+          {/* <CTA to="#">Check out my work portfolio</CTA> */}
+          {/* <CTA to="#">Check out my hobby photography</CTA> */}
+          {/* <CTA to="#">Check out my hobby stuff</CTA> */}
+          {
+            /* <CTA to="https://www.juhopekkala.fi/">Read my blog. I also write blog in finnish</CTA> */
+          }
+          {
+            /* <CTA to="https://www.juhopekkala.fi/">Read my blog. I write sometimes</CTA> */
+          }
+        </div>
+      </div>
+    </div>
+  </div>
 </Layout>
